update files of projects

--- a/index.html
+++ b/index.html
@@ -4,191 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doccy API Documentation</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        .left-panel, .middle-panel, .right-panel {
-            box-sizing: border-box;
-            padding: 20px;
-            height: 98vh;
-            overflow-y: scroll;
-        }
-
-        .left-panel {
-            flex: 0 0 400px;
-            background-color: #333;
-            color: #fff;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-            z-index: 1;
-        }
-
-        .middle-panel, .right-panel {
-            flex: 1;
-        }
-
-        .middle-panel {
-            background-color: #e0e0e0;
-        }
-
-        .right-panel {
-            background-color: #d0d0d0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em 0;
-            width: 100%;
-            z-index: 2;
-        }
-
-        h1 {
-            margin: 0;
-        }
-
-        section {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            padding: 20px;
-        }
-
-        h2 {
-            border-bottom: 2px solid #333;
-            color: #333;
-            padding-bottom: 10px;
-        }
-
-        form {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-
-        label {
-            font-weight: bold;
-            margin-bottom: 5px;
-            display: block;
-        }
-
-        input,
-        select,
-        textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #333;
-            color: #fff;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #555;
-        }
-
-        .response-list {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .response-item {
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-
-        .response-item label {
-            display: inline-block;
-            margin-bottom: 5px;
-        }
-
-        .remove-response {
-            color: #d9534f;
-            cursor: pointer;
-            margin-left: 10px;
-        }
-
-        .remove-response:hover {
-            text-decoration: underline;
-        }
-
-        /* Sidebar Styles */
-        .sidebar {
-            background-color: #333;
-            color: #fff;
-            width: 400px;
-            padding: 20px;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-            z-index: 1;
-            overflow-y: auto;
-        }
-
-        .endpoint-list {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .endpoint-item {
-            margin-bottom: 10px;
-        }
-
-        .endpoint-item a {
-            display: block;
-            padding: 10px;
-            background-color: #555;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .endpoint-item a:hover {
-            background-color: #777;
-        }
-
-        #menu-bar {
-            background-color: rgb(5, 127, 192);
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-            z-index: 2;
-            position: absolute;
-            width: 95%;
-            top: 0;
-        }
-
-        #menu-bar a {
-            color: #fff;
-            text-decoration: none;
-            margin-right: 20px;
-            font-size: 16px;
-        }
-
-        #menu-bar a:hover {
-            text-decoration: underline;
-        }
-
-    </style>
+    <script src="doccy.js">
+    </script>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="menu-bar">
@@ -255,239 +73,5 @@
             </form>
         </section>
     </div>
-
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Function to add a new endpoint
-            function addEndpoint(endpointData) {
-                // Create HTML elements for the endpoint in the sidebar
-                const sidebarEndpointItem = document.createElement('li');
-                sidebarEndpointItem.className = 'endpoint-item';
-                sidebarEndpointItem.innerHTML = `<a href="#">${endpointData.method} ${endpointData.path}</a>`;
-                sidebarEndpointItem.onclick = function () {
-                    displayEndpointDetails(endpointData);
-                };
-
-                // Append the endpoint to the sidebar
-                document.getElementById('sidebar-endpoint-list').appendChild(sidebarEndpointItem);
-
-                // Create HTML elements for the endpoint details
-                const endpointDetails = document.getElementById('endpoint-details');
-                endpointDetails.innerHTML = `
-                    <h3>${endpointData.method} ${endpointData.path}</h3>
-                    <p><strong>Summary:</strong> ${endpointData.summary}</p>
-                    <p><strong>Description:</strong> ${endpointData.description}</p>
-                    <h4>Responses:</h4>
-                    <ul class="response-list">
-                        ${endpointData.responses.map((response, index) => `
-                            <li class="response-item">
-                                <strong>${response.code}</strong>: ${response.description}
-                                <pre>${JSON.stringify(response.content, null, 2)}</pre>
-                            </li>
-                        `).join('')}
-                    </ul>
-                `;
-            }
-
-            // Function to add a new response to the form
-            window.addNewResponse = function () {
-                const responseList = document.getElementById('response-list');
-                const responseCount = responseList.childElementCount;
-
-                // Create HTML elements for the new response
-                const responseElement = document.createElement('li');
-                responseElement.className = 'response-item';
-                responseElement.innerHTML = `
-                    <label for="response-code-${responseCount}">Response Code:</label>
-                    <input type="text" id="response-code-${responseCount}" name="response-code-${responseCount}" required>
-
-                    <label for="response-desc-${responseCount}">Description:</label>
-                    <input type="text" id="response-desc-${responseCount}" name="response-desc-${responseCount}" required>
-
-                    <label for="response-content-${responseCount}">Content (JSON Schema):</label>
-                    <textarea id="response-content-${responseCount}" name="response-content-${responseCount}" rows="4" required></textarea>
-
-                    <span class="remove-response" onclick="removeResponse(${responseCount})">Remove</span>
-                `;
-
-                // Append the new response to the response list
-                responseList.appendChild(responseElement);
-            };
-
-            // Function to remove a response from the form
-            window.removeResponse = function (index) {
-                const responseList = document.getElementById('response-list');
-                const responseItem = document.getElementById(`response-content-${index}`);
-                responseList.removeChild(responseItem.parentElement);
-            };
-
-            // Function to add a new endpoint from the form
-            window.addNewEndpoint = function () {
-                // Get form data
-                const path = document.getElementById('path').value;
-                const method = document.getElementById('method').value;
-                const summary = document.getElementById('summary').value;
-                const description = document.getElementById('description').value;
-
-                // Get responses data
-                const responses = [];
-                const responseList = document.getElementById('response-list');
-                const responseItems = responseList.getElementsByClassName('response-item');
-
-                for (const responseItem of responseItems) {
-                    const code = responseItem.querySelector(`[id^="response-code"]`).value;
-                    const desc = responseItem.querySelector(`[id^="response-desc"]`).value;
-                    const content = JSON.parse(responseItem.querySelector(`[id^="response-content"]`).value);
-
-                    responses.push({
-                        code,
-                        description: desc,
-                        content,
-                    });
-                }
-
-                // Example: Adding a new endpoint
-                const newEndpoint = {
-                    path,
-                    method,
-                    summary,
-                    description,
-                    responses,
-                };
-
-                // Add the new endpoint
-                addEndpoint(newEndpoint);
-
-                // Clear the form
-                document.getElementById('endpoint-form').reset();
-                responseList.innerHTML = ''; // Clear responses
-            };
-
-            // Function to display endpoint details in the main panel
-            function displayEndpointDetails(endpointData) {
-                const endpointDetails = document.getElementById('endpoint-details');
-                endpointDetails.innerHTML = `
-                    <h3>${endpointData.method} ${endpointData.path}</h3>
-                    <p><strong>Summary:</strong> ${endpointData.summary}</p>
-                    <p><strong>Description:</strong> ${endpointData.description}</p>
-                    <h4>Responses:</h4>
-                    <ul class="response-list">
-                        ${endpointData.responses.map((response, index) => `
-                            <li class="response-item">
-                                <strong>${response.code}</strong>: ${response.description}
-                                <pre>${JSON.stringify(response.content, null, 2)}</pre>
-                            </li>
-                        `).join('')}
-                    </ul>
-                `;
-            }
-
-            // Function to download endpoint details as JSON
-            window.downloadEndpoints = function () {
-                const endpointData = getEndpointsData(); // Retrieve endpoint data
-                const jsonString = JSON.stringify(endpointData, null, 2);
-
-                const blob = new Blob([jsonString], { type: 'application/json' });
-                const url = URL.createObjectURL(blob);
-
-                const a = document.createElement('a');
-                a.href = url;
-                a.download = 'endpoints.json';
-                document.body.appendChild(a);
-                a.click();
-                document.body.removeChild(a);
-
-                URL.revokeObjectURL(url);
-            };
-
-            // Function to get endpoint data from the DOM
-            function getEndpointsData() {
-                const sidebarEndpointList = document.getElementById('sidebar-endpoint-list');
-                const endpointItems = sidebarEndpointList.getElementsByClassName('endpoint-item');
-
-                const endpoints = [];
-
-                for (const endpointItem of endpointItems) {
-                    const endpointLink = endpointItem.querySelector('a');
-                    const path = endpointLink.textContent.trim().split(' ').slice(1).join(' ');
-                    const method = endpointLink.textContent.trim().split(' ')[0];
-                    const endpointDetails = getEndpointDetails(path, method);
-
-                    endpoints.push(endpointDetails);
-                }
-
-                return endpoints;
-            }
-
-            // Function to get details of a specific endpoint
-            function getEndpointDetails(path, method) {
-                const endpointDetails = {
-                    path,
-                    method,
-                    summary: '',
-                    description: '',
-                    responses: []
-                };
-
-                // ... (your existing code to fetch and populate endpointDetails) ...
-
-                return endpointDetails;
-            }
-
-            // Example: Adding a sample endpoint
-            const exampleEndpoint = {
-                path: '/example',
-                method: 'GET',
-                summary: 'Get example data',
-                description: 'Retrieve data for the example endpoint',
-                responses: [
-                    {
-                        code: '200',
-                        description: 'Successful response',
-                        content: {
-                            'application/json': {
-                                // JSON Schema for the response
-                            }
-                        }
-                    },
-                    // Add more responses as needed
-                ]
-            };
-
-            // Initialize with the sample endpoint
-            addEndpoint(exampleEndpoint);
-            displayEndpointDetails(exampleEndpoint);
-        });
-
-
-        // Your existing JavaScript code here
-
-        // Example functions for menu actions
-        function newFile() {
-            // Add logic for creating a new file
-            console.log("New File");
-        }
-
-        function openFile() {
-            // Add logic for opening a file
-            console.log("Open File");
-        }
-
-        function saveFile() {
-            // Add logic for saving a file
-            console.log("Save File");
-        }
-
-        function exportFile() {
-            // Add logic for exporting a file
-            console.log("Export File");
-        }
-
-        function showHelp() {
-            // Add logic for showing help
-            console.log("Show Help");
-        }
-    </script>
 </body>
 </html>
