solve item style dynmaiclly, need to start work on edit option

--- a/layout.html
+++ b/layout.html
@@ -36,11 +36,11 @@
         }
 
         .post {
-            background-color: green;
+            background-color: rgb(91, 241, 141);
         }
 
         .get {
-            background-color: blue;
+            background-color: rgb(31, 166, 250);
         }
 
 
