start working with js file to make it more functional

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doccy API Documentation</title>
-    <script src="doccy.js">
-    </script>
+    <!-- <script src="doccy.js">
+    </script> -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <div class="content">
         <div class="menu-bar">
             <!-- File Menu -->
@@ -23,7 +24,7 @@
 
             <!-- Help Menu -->
             <div>
-                <a href="#" onclick="showHelp()">Help</a>
+                <a href="http://www.cgs-online.de" onclick="showHelp()">Help</a>
             </div>
         </div>
         <div class="container">
@@ -79,6 +80,7 @@
             </div>
         </div>
     </div>
+    <script src="doccy.js"></script>
 </body>
 
 </html>
